--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -3,7 +3,9 @@ head
   title CanariApp
   link(rel="shortcut icon", href="/assets/images/favicon.ico")
   meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui")
+  link(rel="stylesheet", href="/assets/style/main.css")
+
   block head
 body
-  .block-content
+  .wrapper
     block content
