--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -9,3 +9,6 @@ head
 body
   .wrapper
     block content
+
+  .footer
+    a.btn(href="https://docs.google.com/spreadsheets/d/1El5lOQrH-X9GgPRxWpMFw7AAI4i7DMDDYnBFQ82io08/edit#gid=0", target="_blank") Contribute
