Add windowsphone field. Close #2

--- a/app/server/views/index.jade
+++ b/app/server/views/index.jade
@@ -16,3 +16,5 @@ block content
             a.btn(href="#{row.appstore}", target="_blank") App Store
           if row.googleplay
             a.btn(href="#{row.googleplay}", target="_blank") Google Play
+          if row.windowsphone
+            a.btn(href="#{row.windowsphone}", target="_blank") Windows Phone
