--- a/app/server/views/layout.jade
+++ b/app/server/views/layout.jade
@@ -4,6 +4,7 @@ head
   link(rel="shortcut icon", href="/assets/images/favicon.ico")
   meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui")
   link(rel="stylesheet", href="/assets/style/main.css")
+  link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.css")
 
   block head
 body
